test/src/e2e_vm_tests/test_programs/should_pass/language/booleans_test/src/main.sw
script;

fn main() -> bool {
  true && false
}
