test/src/e2e_vm_tests/test_programs/should_fail/dep_doc_comment/src/main.sw
contract;

dep foo;

/// This doc comment
/// should return a parser error
dep bar;

dep baz;

fn a() -> bool { true }

